objects/HealthCloudGA__CarePlanGoal__c.object
<CustomObject>
    <description>Health improvement goal to address a particular health problem for a given patient as part of their care plan</description>
    <fields>
        <fullName>HealthCloudGA__ActivityDate__c</fullName>
        <description>Goal&apos;s Due Date</description>
        <inlineHelpText>Goal&apos;s Due Date</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanProblem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Health problem this goal is meant to address</description>
        <inlineHelpText>Problem this goal is meant to address</inlineHelpText>
        <label>Problem</label>
        <referenceTo>HealthCloudGA__CarePlanProblem__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>CarePlanGoals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Template</label>
        <referenceTo>HealthCloudGA__CarePlanTemplate__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Care plan this goal is a part of</description>
        <label>Care Plan</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>CarePlanGoals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cognition Improvement</fullName>
                </value>
                <value>
                    <fullName>Weight Management</fullName>
                </value>
                <value>
                    <fullName>Muscle Strength Improvement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <color>#FFFF66</color>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <color>#FF6600</color>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>High</fullName>
                    <color>#FF0000</color>
                    <label>High</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Progress__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Progress toward achieving goal</description>
        <inlineHelpText>Progress toward achieving goal</inlineHelpText>
        <label>% Progress</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Goal</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>HealthCloudGA__goalPercentCompletion</fullName>
        <active>true</active>
        <description>Goal Percent Completion should be less than or equal to 100</description>
        <errorConditionFormula>HealthCloudGA__Progress__c &gt;1.0</errorConditionFormula>
        <errorDisplayField>HealthCloudGA__Progress__c</errorDisplayField>
        <errorMessage>The value for Progress can&apos;t be more than 100%.</errorMessage>
    </validationRules>
</CustomObject>